Initial commit: backend and frontend

--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=gateway
 
 #server
-server.port=8080
+server.port=${PORT:8080}
 
 #PostgreSQL DB configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/apigatewaydb
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 #Jpa config
@@ -18,5 +18,7 @@ spring.jpa.properties.hibernate.format-sql=true
 logging.level.org.springframework.security=DEBUG
 
 #jwt secret
-jwt.secret=4kG7uTz5vWn9JX1qLpYzC3rFaSe8HdVm
+jwt.secret=${JWT_SECRET}
 jwt.expiration-in-ms=3600000
+
+allowed.origin=${ALLOWED_ORIGIN}
