--- a/api-gateway-frontend/package.json
+++ b/api-gateway-frontend/package.json
@@ -20,7 +20,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "postinstall": "",
+    "postinstall": "chmod +x ./node_modules/.bin/vite",
     "dev:css": "tailwindcss -i ./src/index.css -o ./src/output.css --watch",
     "build:css": "tailwindcss -i ./src/index.css -o ./dist/output.css --watch"
   },
