--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -4,21 +4,22 @@ spring.application.name=gateway
 server.port=${PORT:8080}
 
 #PostgreSQL DB configuration
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/apigatewaydb}
+spring.datasource.username=${DB_USER:postgres}
+spring.datasource.password=${DB_PASS:root}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 #Jpa config
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 #logging
 logging.level.org.springframework.security=DEBUG
 
 #jwt secret
-jwt.secret=${JWT_SECRET}
-jwt.expiration-in-ms=3600000
+jwt.secret=${JWT_SECRET:4kG7uTz5vWn9JX1qLpYzC3rFaSe8HdVm}
+jwt.expiration-in-ms=${JWT_EXP:3600000}
 
-allowed.origin=${ALLOWED_ORIGIN}
+allowed.origin=${ALLOWED_ORIGIN:http://localhost:5173}
