application.properties setup for database configuration

--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.application.name=gateway
 server.port=${PORT:8080}
 
 #PostgreSQL DB configuration
-spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/apigatewaydb}
-spring.datasource.username=${DB_USER:postgres}
-spring.datasource.password=${DB_PASS:root}
+spring.datasource.url=jdbc:postgresql://dpg-d2le5kp5pdvs73ak0j90-a.oregon-postgres.render.com:5432/springboot_db_dmma
+spring.datasource.username=springboot_db_dmma_user
+spring.datasource.password=GOXoYr8kfPo60vykzuNfclVJU3eIXLfH
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 #Jpa config
