--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.application.name=gateway
 server.port=${PORT:8080}
 
 #PostgreSQL DB configuration
-spring.datasource.url=jdbc:postgresql://dpg-d2le5kp5pdvs73ak0j90-a.oregon-postgres.render.com:5432/springboot_db_dmma
-spring.datasource.username=springboot_db_dmma_user
-spring.datasource.password=GOXoYr8kfPo60vykzuNfclVJU3eIXLfH
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 #Jpa config
