--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.application.name=gateway
 server.port=${PORT:8080}
 
 #PostgreSQL DB configuration
-spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DATABASE}
-spring.datasource.username=${POSTGRES_USER}
-spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://${POSTGRES_HOST:dpg-d2le5kp5pdvs73ak0j90-a.oregon-postgres.render.com}:${POSTGRES_PORT:5432}/${POSTGRES_DATABASE:springboot_db_dmma}}
+spring.datasource.username=${DATABASE_USERNAME:${POSTGRES_USER:springboot_db_dmma_user}}
+spring.datasource.password=${DATABASE_PASSWORD:${POSTGRES_PASSWORD:GOXoYr8kfPo60vykzuNfclVJU3eIXLfH}}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 #Jpa config
