--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -22,4 +22,4 @@ logging.level.org.springframework.security=DEBUG
 jwt.secret=${JWT_SECRET:4kG7uTz5vWn9JX1qLpYzC3rFaSe8HdVm}
 jwt.expiration-in-ms=${JWT_EXP:3600000}
 
-allowed.origin=${ALLOWED_ORIGIN:http://localhost:5173}
+allowed.origin=${ALLOWED_ORIGIN:https://public-api-gateway-app.vercel.app/}
